# Cartel-d-etect

./: 0HashPriorityss.ps1  1ULTIMATE RECRUTING Cartel.bat  2HWID_Pro_v4.7_UEFI_Hypervisor_Reflection.ps1  BUILD.md  CMakeLists.txt  Extended Discord Account.ps1  README.md  Untitled-sadsadsadas.ps1  hashes.txt  triggers.txt
config/: config.ini  config.json  hashes.csv  keywords.txt  sample_browser_log.txt  sample_discord_log.txt  sites.txt
include/: BrowserScanner.h  Config.h  DiscordScanner.h  HashScanner.h  Logger.h  RiskCalculator.h  Sha256.h  Utility.h
src/: BrowserScanner.cpp  BrowserScanner.h  Config.cpp  Config.h  DiscordScanner.cpp  DiscordScanner.h  HashScanner.cpp  HashScanner.h  Logger.cpp  Logger.h  RiskCalculator.cpp  RiskCalculator.h  Sha256.cpp  main.cpp
src/UI/: MainWindow.cpp  MainWindow.h
src/ui/: MainWindow.cpp  MainWindow.h
src/utils/: SHA256.cpp  SHA256.h
